tests/errors/context_free_pp/lib.c
#define PRE false
#include "lib.h"

void foo()
    //@ requires false;
    //@ ensures true;
{
    int *p = 0;
    *p = 42;
}
